--- a/requirements.txt
+++ b/requirements.txt
@@ -160,10 +160,9 @@ pypdf==5.0.1
 PyPika==0.48.9
 pyproject_hooks==1.2.0
 pyreadline3==3.5.4
+pysqlite3-binary
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-pytz==2024.2
-pywin32==308
 PyYAML==6.0.2
 pyzmq==26.2.0
 referencing==0.35.1
